--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Deseos</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Intercambio Navideño</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <main>
-        <h1>Intercambio Navideño</h1>
-        <div id="families-container"></div>
-        <div id="particles-js"></div>
-    </main>
-
-    <script src="script.js"></script>
+  <h1>Intercambio Navideño</h1>
+  <div id="families-container"></div>
+  
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
+
