--- a/static/style.css
+++ b/static/style.css
@@ -150,3 +150,24 @@ h1 {
     color: #e74c3c; /* Rojo en hover */
 }
 
+#add-wish-form {
+  margin-top: 30px;
+}
+
+form input, form button {
+  padding: 8px;
+  margin: 5px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+}
+
+form button {
+  background-color: #4b0082;
+  color: white;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #800080;
+}
+
